# nodule-scout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
data/advisory_notes/: README.md  false-positive-tolerance.md  generalization-equity.md  intended-use-boundary.md  subsolid-nodules.md  triage-thresholds.md  workflow-integration.md
examples/sample-run/: gap_analysis.json  gap_analysis.md  trace.jsonl
src/phase01/: __init__.py  env.py  guardrails.py  models.py  orchestrator.py  render.py  runtime.py
src/phase01/tools/: fda510k.py  http.py  maude.py  pubmed.py  retrieval.py
tests/: test_guardrails.py  test_tools_smoke.py
