[project]
name = "nodule-scout"
version = "0.1.0"
description = "A runnable research-orchestrator agent for early ideation of AI lung-nodule detection/triage SaMD: real FDA/NIH APIs, RAG grounding, and a citation guardrail, built on the Claude Agent SDK."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.100",
    "httpx>=0.27",
    "pydantic>=2.6",
    "rank-bm25>=0.2.2",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
